package lab.eventSystem;


/**
 * Заготовка на случай расширения приложения.
 */
public class Event {
}